--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -141,6 +141,7 @@
       grid-row: span 5;
       grid-column: 2;
       height: 100%;
+position: relative;
       &__block {
         background-image: url('../../assets/images/me.jpg');
         background-repeat: no-repeat;
