--- a/src/components/Me/index.scss
+++ b/src/components/Me/index.scss
@@ -214,3 +214,67 @@
   transform: scale(0);
   transition: all .2s ease-in-out;
 }
+
+// Responsive tablet
+/*=====================================*/
+
+@media (max-width: 1138px) {
+
+  .me__module {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(19, 1fr);
+    height: 430vh;
+    &__square {
+
+      &__me {
+        grid-row: span 3;
+      grid-column: 1;
+      height: 100%;
+      }
+
+      &__aspirations {
+        grid-row: 4/span 2;
+        grid-column: 1;
+        height: 100%;
+      }
+
+      &__competences {
+        grid-row: 10/span 4;
+        grid-column: 1;
+        height: 100%;
+      }
+
+      &__experience {
+        grid-row: 6/span 4;
+        grid-column: 1;
+        height: 100%;
+      }
+
+      &__hobbies {
+        grid-row: 17/span 3;
+        grid-column: 1;
+        height: 100%;
+      }
+
+      &__formation {
+        grid-row: 14/span 3;
+        grid-column: 1;
+        height: 100%;
+      }
+  }
+}
+
+/* Responsive smartphone */
+/*=====================================*/
+
+@media (max-width: 562px) {
+
+  .border {
+  	width: 100%;
+  }
+
+  .categories {
+  	display: block;
+  }
+}
+}
