--- a/src/components/UxUiProjects/index.scss
+++ b/src/components/UxUiProjects/index.scss
@@ -4,6 +4,7 @@
 .uxUiProjects {
     display: flex;
     margin-left: (vars.$bigGutter)*5;
+    margin-right: (vars.$bigGutter)*5;
     &__squares {
       &__flex {
         display: flex;
@@ -55,7 +56,7 @@
 .uxUiProjects__module {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(9, 1fr);
-  width: 80vw;
+  width: 100%;
   list-style: none;
   display: grid;
   height: 150vh;
@@ -385,5 +386,64 @@
   -webkit-transform: scale(0);
   transform: scale(0);
   transition: all .2s ease-in-out;
+}
+
+  // Responsive tablet
+/*=====================================*/
+
+@media (max-width: 1138px) {
+
+  .uxUiProjects__module {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(21, 1fr);
+    height: 350vh;
+    &__square {
+
+      &__uxUiProjects {
+        grid-row: span 4;
+        grid-column: 1;
+        height: 100%;
+      }
+
+      &__wordpress {
+        grid-row: 5/span 4;
+        grid-column: 1;
+        height: 100%;
+      }
+
+      &__ifps {
+        grid-row: 9/span 4;
+        grid-column: 1;
+        height: 100%;
+      }
+
+      &__illustration {
+        grid-row: 13/span 4;
+        grid-column: 1;
+        height: 100%;
+      }
+
+      &__affiches {
+        grid-row: 17/span 4;
+        grid-column: 1;
+        height: 100%;
+      }
+
+  }
+}
+
+/* Responsive smartphone */
+/*=====================================*/
+
+@media (max-width: 562px) {
+
+  .border {
+  	width: 100%;
+  }
+
+  .categories {
+  	display: block;
+  }
+}
 }
 
