--- a/src/microComponents/Header/index.scss
+++ b/src/microComponents/Header/index.scss
@@ -6,26 +6,101 @@
     justify-content: flex-end;
     height: (vars.$bigGutter)*4;
     align-items: center;
-    &__logoContainer {
-      width: 100px;
-      height: 100px;
-      background-color: vars.$yellow;
-      position: relative;
-      display: inline-block;
+    z-index:100;
+    position: relative;
+    &__links {
+      &__logoContainer {
+        width: 100px;
+        height: 100px;
+        background-color: vars.$yellow;
+        position: relative;
+        display: inline-block;
+        &__circle {
+          position: absolute;
+          bottom: 17px;
+          right: 10px;
+  
+        }
+      }
+      &__link {
+        display: inline-block;
+        margin-left: vars.$bigGutter;
+        text-align: right;
+        &:hover {
+          transition: all .2s ease-in-out;
+          color: vars.$yellow;
+        }
+    }
+    }
+    &__hamburger {
+      margin: vars.$smallGutter;
+      z-index: 1000;
+      position: absolute;
       &__circle {
-        position: absolute;
-        bottom: 17px;
-        right: 10px;
+        width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      display: none;
+      background-color: vars.$yellow;
+      }
+    }
+    
+    &__modal {
+      margin: vars.$smallGutter;
+      position: absolute;
+      top: 0;
+      margin-left: auto;
+      margin-right: auto;
+      left: 0;
+      right: 0;
+      text-align: center;
+      z-index: 100;
+    &__circle {
+      width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: vars.$orange;
+    display: inline-block;
+    transition: all .2s ease-in-out;
+    }
+    }
+}
 
+@media (max-width: 562px) {
+
+  .header {
+    display: block;
+    margin: 0;
+    &__links {
+      display: none;
+    }
+    &__hamburger {
+      position: relative;
+      height: 70px;
+      text-align: center;
+      padding-top: calc(35px/2);
+      &__circle {
+        display: inline-block;       
       }
     }
-    &__link {
-      display: inline-block;
-      margin-left: vars.$bigGutter;
-      text-align: right;
-      &:hover {
-        transition: all .2s ease-in-out;
-        color: vars.$yellow;
-      }
+
+    &__modal {
+      display: block;
+      
+     
+     &__circle {
+      border-radius: 50%;
+      background-color: vars.$orange;
+      transition: transform .2s ease-in-out;
+     &__grow {
+      transform: scale(3);
+      transition: transform .2s ease-in-out;
+     }
+     }
     }
+
+}
+
+
+
 }
