--- a/src/components/UxUiProjects/index.scss
+++ b/src/components/UxUiProjects/index.scss
@@ -437,12 +437,9 @@
 
 @media (max-width: 562px) {
 
-  .border {
-  	width: 100%;
-  }
-
-  .categories {
-  	display: block;
+  .uxUiProjects {
+    margin-right: vars.$bigGutter;
+    margin-left: vars.$bigGutter;
   }
 }
 }
