--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -209,7 +209,7 @@
   // Responsive tablet
 /*=====================================*/
 
-@media (max-width: 1138px) {
+@media screen and (max-width: 1138px) {
 
   .contact__module {
     grid-template-columns: 1fr;
@@ -233,7 +233,7 @@
 /* Responsive smartphone */
 /*=====================================*/
 
-@media (max-width: 562px) {
+@media screen and (max-width: 562px) {
 
   .contact {
     margin-right: vars.$bigGutter;
