--- a/src/components/Legal/index.scss
+++ b/src/components/Legal/index.scss
@@ -11,7 +11,7 @@
   // Responsive tablet
 /*=====================================*/
 
-@media (max-width: 1138px) {
+@media screen and (max-width: 1138px) {
 
   .legal {
     grid-template-columns: 1fr;
@@ -35,7 +35,7 @@
 /* Responsive smartphone */
 /*=====================================*/
 
-@media (max-width: 562px) {
+@media screen and (max-width: 562px) {
 
   .contact {
     margin-right: vars.$bigGutter;
