responsive mobile big title

--- a/src/components/UxUiProjects/index.scss
+++ b/src/components/UxUiProjects/index.scss
@@ -441,6 +441,9 @@
     margin-right: vars.$bigGutter;
     margin-left: vars.$bigGutter;
   }
+  .bigTitle {
+    font-size: (vars.$bigGutter)*4;
+  }
 }
 }
 
