--- a/src/components/DevProjects/index.scss
+++ b/src/components/DevProjects/index.scss
@@ -471,5 +471,9 @@
     margin-right: vars.$bigGutter;
     margin-left: vars.$bigGutter;
   }
+
+  .bigTitle {
+    font-size: (vars.$bigGutter)*4;
+  }
 }
 }
