align buttons on project component and change display of go back button

--- a/src/components/Project/index.scss
+++ b/src/components/Project/index.scss
@@ -1,7 +1,7 @@
 @use '../../styles/vars';
 
 
-.project{
+.project {
     display: flex;
     margin-left: (vars.$bigGutter)*5;
     margin-right: (vars.$bigGutter)*5;
@@ -172,6 +172,10 @@
           &__date {
             align-self: flex-end;
             }
+          }
+          &__button {
+            display: flex;
+            align-items: flex-end;
           }
         } 
       }
