--- a/src/microComponents/goBackButton/index.scss
+++ b/src/microComponents/goBackButton/index.scss
@@ -13,7 +13,8 @@
   transition: all .2s ease-in-out;
   position: absolute;
   bottom: 0;
-  left: 0;
+  right: 0;
+  outline: solid 3px vars.$darkBrown;
   &__svg {
     color: vars.$darkBrown;
   }
