--- a/src/components/DevProjects/index.scss
+++ b/src/components/DevProjects/index.scss
@@ -243,12 +243,13 @@
           }
       }
     }
-    &__api{
-      grid-row: 4/span 5;
-      grid-column: 2;
+    &__api {
+      grid-row: span 3;
+      grid-column: 1; 
       height: 100%;
+      position: relative;
       &__block {
-        background-image: url('../../assets/images/dev.jpg');
+        background-image: url('../../assets/images/devProjects/git_api_screenshot.png');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -259,33 +260,52 @@
         vertical-align: center;
         width: 100%;
         position: relative;
+        
+        &:hover {
+          transform: scale(1.2);
+        }
+      }
+      &__content {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 10;
+        top: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        backdrop-filter: grayscale(50%) blur(1px) brightness(0.6);
+        -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      -ms-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
+        &:hover {
+          backdrop-filter: grayscale(30%) blur(0px) brightness(0.9);
+          -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      -ms-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
+        }
         &__mainTitle {
-          display: block;
-          width: 100%;
           position: relative;
           z-index: 10;
+          text-align: center;
+          margin: 0 auto;
+          
           &__small__title {
-            display: block;
             font-size: (vars.$bigGutter)*1.5;
-            font-family: vars.$smallFont;
-            font-style: italic;
             text-transform: uppercase;
-            text-align: center;
+            
           }
-          &__big__title {
-            display: block;
-            font-size:( vars.$bigGutter*10);
-            font-family: vars.$largeFont;
-            text-transform: uppercase;
-            text-align: center;
-          } 
         }
          &__description {
             position: absolute;
             width: 100%;
             bottom: (vars.$bigGutter)*2;
             text-align: center;
-            font-size: vars.$smallGutter;
           }
       }
     }
