change projects display

--- a/src/microComponents/Header/index.scss
+++ b/src/microComponents/Header/index.scss
@@ -9,27 +9,33 @@
     z-index:100;
     position: relative;
     &__links {
-      &__logoContainer {
-        width: 100px;
-        height: 100px;
-        background-color: vars.$yellow;
-        position: relative;
-        display: inline-block;
-        &__circle {
-          position: absolute;
-          bottom: 17px;
-          right: 10px;
-  
+      display: flex;
+      &__item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: vars.$bigGutter;
+        &__logoGit {
+          width: 20px;
+          height: 20px;
+          background-image: url('../../assets/images/pictos/github_picto.svg');
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
+        }
+        &__logoLinkedin {
+          width: 20px;
+          height: 20px;
+          background-image: url('../../assets/images/pictos/linkedin_picto.svg');
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: cover;
         }
       }
       &__link {
         display: inline-block;
-        margin-left: vars.$bigGutter;
+        margin-left: (vars.$smallGutter) / 2;
         text-align: right;
-        &:hover {
-          transition: all .2s ease-in-out;
-          color: vars.$yellow;
-        }
     }
     }
     &__hamburger {
@@ -158,4 +164,8 @@
       }
     }
 }
+}
+
+svg:hover {
+  fill: vars.$yellow;
 }
